# bluezero

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile.in  LICENSE.md  README.md  TODO.md  config.h.in  notes.txt  v1-to-v2.md
bindings/: CMakeLists.txt  bluezero.h
bindings/csharp/: .CMakeLists.txt.swp  CMakeLists.txt
bindings/java/: java.cpp  java.h
docs/: _connecting.html  _time.html  annotated.html  b0_8h_source.html  c_8h_source.html  classb0_1_1_abstract_publisher-members.html  classb0_1_1_abstract_publisher.html  classb0_1_1_abstract_service_client-members.html  classb0_1_1_abstract_service_client.html  classb0_1_1_abstract_service_server-members.html  classb0_1_1_abstract_service_server.html  classb0_1_1_abstract_subscriber-members.html  classb0_1_1_abstract_subscriber.html  classb0_1_1_local_logger-members.html  classb0_1_1_local_logger.html  classb0_1_1_log_interface-members.html  classb0_1_1_log_interface.html  classb0_1_1_logger-members.html  classb0_1_1_logger.html  classb0_1_1_node-members.html  classb0_1_1_node.html  classb0_1_1_publisher-members.html  classb0_1_1_publisher.html  classb0_1_1_resolver-members.html  classb0_1_1_resolver.html  classb0_1_1_service_client-members.html  classb0_1_1_service_client.html  classb0_1_1_service_server-members.html  classb0_1_1_service_server.html  classb0_1_1_socket-members.html  classb0_1_1_socket.html  classb0_1_1_subscriber-members.html  classb0_1_1_subscriber.html  classb0_1_1_time_sync-members.html  classb0_1_1_time_sync.html  classb0_1_1logger_1_1_console-members.html  classb0_1_1logger_1_1_console.html  classb0_1_1logger_1_1_local_logger-members.html  classb0_1_1logger_1_1_local_logger.html  classb0_1_1logger_1_1_log_interface-members.html  (+102 more)
examples/: CMakeLists.txt
examples/client_server/: CMakeLists.txt  client_node.cpp  client_node_c.c  client_node_object.cpp  client_server.proto  server_node.cpp  server_node_c.c  server_node_object.cpp
examples/publisher_subscriber/: CMakeLists.txt  multi_publisher.cpp  multi_subscriber.cpp  publisher_node.cpp  publisher_node_c.c  publisher_node_object.cpp  publisher_subscriber.proto  subscriber_node.cpp  subscriber_node_c.c  subscriber_node_object.cpp  subscriber_node_object_manual.cpp
gui/: CMakeLists.txt  graph_console_gui.cpp  log_console_gui.cpp
protobuf/: envelope.proto  logger.proto  resolver.proto
python/: pyb0.cpp  test-publisher.py  test-service-client.py  test-service-server.py  test-subscriber.py
python-ctypes/: b0.py  test-publisher.py  test-service-client.py  test-service-server.py
tests/: CMakeLists.txt  announce_timeout.cpp  args.cpp  c_clisrv_timeout.c  check_resolver_status.cpp  clisrv.cpp  clisrv2.cpp  clisrv_badname.cpp  clisrv_raw.cpp  compress.cpp  many_nodes.cpp  multi_resolver.cpp  protocol.cpp  pubsub.cpp  pubsub2.cpp  pubsub_check_type.cpp  pubsub_many.cpp  pubsub_poll.cpp  pubsub_raw.cpp  pubsub_slowsub.cpp  pubsub_slowsub_zmq.cpp  pubsub_unmanaged.cpp  resolver_shutdown.cpp  test_msgs.proto  time_sync.cpp  time_sync_clock_tracking.cpp  time_sync_offset_recover.cpp  two_nodes_one_thread.cpp
v1/: annotated.html  c_8h_source.html  classb0_1_1_node-members.html  classb0_1_1_node.html  classb0_1_1_publisher-members.html  classb0_1_1_publisher.html  classb0_1_1_service_client-members.html  classb0_1_1_service_client.html  classb0_1_1_service_server-members.html  classb0_1_1_service_server.html  classb0_1_1_socket-members.html  classb0_1_1_socket.html  classb0_1_1_subscriber-members.html  classb0_1_1_subscriber.html  classb0_1_1_time_sync.html  classb0_1_1logger_1_1_console-members.html  classb0_1_1logger_1_1_console.html  classb0_1_1logger_1_1_local_logger-members.html  classb0_1_1logger_1_1_local_logger.html  classb0_1_1logger_1_1_log_interface-members.html  classb0_1_1logger_1_1_log_interface.html  classb0_1_1logger_1_1_logger-members.html  classb0_1_1logger_1_1_logger.html  classb0_1_1resolver_1_1_client-members.html  classb0_1_1resolver_1_1_client.html  classb0_1_1resolver_1_1_resolver-members.html  classb0_1_1resolver_1_1_resolver.html  classes.html  client_8h_source.html  client_node_8cpp-example.html  client_node_c_8c-example.html  client_node_object_8cpp-example.html  console_8h_source.html  dir_5753909a106cc4fa984c627eabb8391b.html  dir_83ffe49f5aa4d637b3c7bff58f7ac1d8.html  dir_c4cc1a5f81afc58077dd72e604784107.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_da3fa505ea5601e931c062a95e4a2dfd.html  env_8h_source.html  files.html  (+85 more)
v2/: annotated.html  announce__node__request_8h_source.html  announce__node__response_8h_source.html  announce__service__request_8h_source.html  announce__service__response_8h_source.html  argument__error_8h_source.html  b0_8h.html  b0_8h_source.html  classb0_1_1_node-members.html  classb0_1_1_node.html  classb0_1_1_publisher-members.html  classb0_1_1_publisher.html  classb0_1_1_service_client-members.html  classb0_1_1_service_client.html  classb0_1_1_service_server-members.html  classb0_1_1_service_server.html  classb0_1_1_socket-members.html  classb0_1_1_socket.html  classb0_1_1_subscriber-members.html  classb0_1_1_subscriber.html  classb0_1_1_time_sync.html  classb0_1_1exception_1_1_argument_error-members.html  classb0_1_1exception_1_1_argument_error.html  classb0_1_1exception_1_1_envelope_decode_error-members.html  classb0_1_1exception_1_1_envelope_decode_error.html  classb0_1_1exception_1_1_envelope_encode_error-members.html  classb0_1_1exception_1_1_envelope_encode_error.html  classb0_1_1exception_1_1_exception-members.html  classb0_1_1exception_1_1_exception.html  classb0_1_1exception_1_1_header_mismatch-members.html  classb0_1_1exception_1_1_header_mismatch.html  classb0_1_1exception_1_1_invalid_state_transition-members.html  classb0_1_1exception_1_1_invalid_state_transition.html  classb0_1_1exception_1_1_message_missing_header_error-members.html  classb0_1_1exception_1_1_message_missing_header_error.html  classb0_1_1exception_1_1_message_pack_error-members.html  classb0_1_1exception_1_1_message_pack_error.html  classb0_1_1exception_1_1_message_too_many_parts_error-members.html  (+226 more)
(+429 files in other folders)
